@@ -1,32 +1,32 @@
 Trace: [java.lang.Math pow: 3, 4] = 81.0 at wrong.sl:6
 81.0
-Trace: [java.io.PrintStream@a4488 println: 81.0] at wrong.sl:6
+Trace: [java.io.PrintStream@f4bcf7 println: 81.0] at wrong.sl:6
 Trace: &casti(1, 'z') = true at wrong.sl:9
 true
-Trace: [java.io.PrintStream@a4488 println: true] at wrong.sl:9
+Trace: [java.io.PrintStream@f4bcf7 println: true] at wrong.sl:9
 Trace: &casti(0, 'z') = false at wrong.sl:10
 false
-Trace: [java.io.PrintStream@a4488 println: false] at wrong.sl:10
+Trace: [java.io.PrintStream@f4bcf7 println: false] at wrong.sl:10
 Trace: &casti(1, 'd') = 1.0 at wrong.sl:13
 1.0
-Trace: [java.io.PrintStream@a4488 println: 1.0] at wrong.sl:13
+Trace: [java.io.PrintStream@f4bcf7 println: 1.0] at wrong.sl:13
 Trace: &casti(1, 'b') = 1 at wrong.sl:16
 1
-Trace: [java.io.PrintStream@a4488 println: 1] at wrong.sl:16
+Trace: [java.io.PrintStream@f4bcf7 println: 1] at wrong.sl:16
 Trace: &casti(100, 'f') = 100.0 at wrong.sl:19
 100.0
-Trace: [java.io.PrintStream@a4488 println: 100.0] at wrong.sl:19
+Trace: [java.io.PrintStream@f4bcf7 println: 100.0] at wrong.sl:19
 Trace: &casti('b', 'c') = b at wrong.sl:22
 b
-Trace: [java.io.PrintStream@a4488 println: b] at wrong.sl:22
+Trace: [java.io.PrintStream@f4bcf7 println: b] at wrong.sl:22
 Trace: &casti(63, 'i') = 63 at wrong.sl:25
 63
-Trace: [java.io.PrintStream@a4488 println: 63] at wrong.sl:25
+Trace: [java.io.PrintStream@f4bcf7 println: 63] at wrong.sl:25
 this is a string y0
-Trace: [java.io.PrintStream@a4488 println: 'this is a string y0'] at wrong.sl:28
+Trace: [java.io.PrintStream@f4bcf7 println: 'this is a string y0'] at wrong.sl:28
 Trace: [new java.lang.StringBuilder: 'test'] = test at wrong.sl:31
 test
-Trace: [java.io.PrintStream@a4488 println: test] at wrong.sl:31
-Trace: &cast(@('a', 'b', 'c', 'd'), 'c') = [C@712651 at wrong.sl:34
+Trace: [java.io.PrintStream@f4bcf7 println: test] at wrong.sl:31
+Trace: &cast(@('a', 'b', 'c', 'd'), 'c') = [C@199939 at wrong.sl:34
 abcd
-Trace: [java.io.PrintStream@a4488 println: [C@712651] at wrong.sl:34
+Trace: [java.io.PrintStream@f4bcf7 println: [C@199939] at wrong.sl:34
